=========================================================================
CHANGE LOG
=========================================================================

2008-05-15 Warren L. DeLano <warren@delsci.com>	

	* increased surface generation performance
	
2008-05-09 Warren L. DeLano <warren@delsci.com>	

	* initial 3Dconnexion SpaceNavigator support for Mac (others coming)
	
2008-05-02 Warren L. DeLano <warren@delsci.com>	

	* fixed nasty crash bug with distance command & multistate objs
	
	* incorporated various fixes for pymol2.PyMOL instances.
	
2008-05-01 Warren L. DeLano <warren@delsci.com>	

	* converted color names storage over to a dictionary (lexicon)

	* fixed bug with color redefinition in the external gui
	
2008-04-30 Warren L. DeLano <warren@delsci.com>	

	* more fixes for Vista compatibility
	
2008-04-25 Warren L. DeLano <warren@delsci.com>	

	* capture command/method for obtaining the entire OpenGL window
	
	* adjusted save behavior so that selections exclusively comprised
	  of static singleton atoms are written out even when the global
	  state index is not unity
	
	* changed behavior of multiplex=0 option for concatenated PDBs
	
2008-04-23 Warren L. DeLano <warren@delsci.com>	

	* made additional tweaks to command flushing
	
2008-04-23 Warren L. DeLano <warren@delsci.com>	

	* fixed more logging-related bugs

	* optimized command-queue flushing for better performance

2008-04-19 Warren L. DeLano <warren@delsci.com>	

	* added support for PDB formal charges.
	
2008-04-17 Warren L. DeLano <warren@delsci.com>	

	* fixed bug with GL_BLEND for distance labels

	* repaired proper logging for various selection-related actions

	* migrated to session-based storage for the measurement wizard
	
2008-04-16 Warren L. DeLano <warren@delsci.com>	

	* tweaked behaviors for better ActiveX usage

	* ESC now exits presentation mode (instead of toggling text)
	
2008-04-12 Warren L. DeLano <warren@delsci.com>	

	* added new movie program menus
	